video elements alignment fixes and other issues already fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3674,3 +3674,7 @@ html .ui-button.ui-state-disabled:active {
     float: left;
     padding: 10px;
 }
+.mrr-course-viewer iframe{
+	margin: auto;
+    display: block;
+}
